fixing them damn buttons to fit on small screens

--- a/stylesheets/stylie.css
+++ b/stylesheets/stylie.css
@@ -244,8 +244,7 @@ footer{
         width: 270px;
     }
     .goBtn {
-        width: 55px;
-        font-size: 11;
+        font-size: 12;
     }
     .buttons {
         padding: 6px;
@@ -261,7 +260,6 @@ footer{
     }
     .goBtn {
         font-size: 12px;
-        width: 60px;
     }
     header{
         width: 350px;
